aux_source_directory(. BENCHMARK_SRC)
foreach(item ${BENCHMARK_SRC})
    string(REGEX MATCH ".*[/\\](.*).cpp$" item_src ${item})
    if(NOT ${CMAKE_MATCH_1} EQUAL "")
        add_executable(${CMAKE_MATCH_1} ${item})
        if(WIN32)
            target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIB_LIST})
        else()
            target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIB_LIST} -lpthread)
        endif()
    endif()
endforeach()