enable_testing()
aux_source_directory(. TEST_EXE)
foreach(item ${TEST_EXE})
    string(REGEX MATCH ".*[/\\](.*).cpp$" item_src ${item})
    if(NOT ${CMAKE_MATCH_1} EQUAL "")
        add_executable(${CMAKE_MATCH_1} ${item})
        if(LINUX)
            target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIB_LIST} GTest::gtest_main -lpthread)
        else()
            target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIB_LIST} GTest::gtest_main)
        endif()
        list(APPEND TEST_LIST ${CMAKE_MATCH_1})
    endif()
endforeach()

include(GoogleTest)
add_subdirectory(protocol/stun)
add_subdirectory(protocol/srt)
foreach (item ${TEST_LIST})
    gtest_discover_tests(${item})
endforeach()