enable_testing()
aux_source_directory(. TEST_EXE)
foreach(item ${TEST_EXE})
    string(REGEX MATCH ".*[/\\](.*).cpp$" item_src ${item})
    if(NOT ${CMAKE_MATCH_1} EQUAL "")
        add_executable(${CMAKE_MATCH_1} ${item})
        target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIBS_GLOBAL} GTest::gtest_main)
        list(APPEND TEST_LIST ${CMAKE_MATCH_1})
    endif()
endforeach()

include(GoogleTest)

if(ENABLE_STUN)
    message("-- enable stun unittest")
    add_subdirectory(protocol/stun)
endif()

if(ENABLE_SRT)
    message("-- enable srt unittest")
    add_subdirectory(protocol/srt)
endif()

if(ENABLE_URI)
    message("-- enable uri unittest")
    add_subdirectory(protocol/uri)
endif()

foreach (item ${TEST_LIST})
    gtest_discover_tests(${item})
endforeach()