aux_source_directory(. TEST_SRT_EXE)
foreach(item ${TEST_SRT_EXE})
    string(REGEX MATCH ".*[/\\](.*).cpp$" item_src ${item})
    add_executable(${CMAKE_MATCH_1} ${item})
    target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIBS_GLOBAL} GTest::gtest_main)
    gtest_discover_tests(${CMAKE_MATCH_1})
endforeach()