aux_source_directory(. TEST_STUN_EXE)
foreach(item ${TEST_STUN_EXE})
    string(REGEX MATCH ".*[/\\](.*).cpp$" item_src ${item})
    add_executable(${CMAKE_MATCH_1} ${item})
    if(WIN32)
        target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIB_LIST} GTest::gtest_main)
    else()
        target_link_libraries(${CMAKE_MATCH_1} PUBLIC ${LINK_LIB_LIST} GTest::gtest_main -lpthread)
    endif()
    gtest_discover_tests(${CMAKE_MATCH_1})
endforeach()