aux_source_directory(. TEST_STUN_EXE)
foreach(item ${TEST_STUN_EXE})
    string(REGEX MATCH ".*[/\\](.*).cpp$" item_src ${item})
    add_executable(${CMAKE_MATCH_1} ${item})
    if(WIN32)
        target_link_libraries(${CMAKE_MATCH_1} PUBLIC GTest::gtest_main ${LINK_LIBS_GLOBAL})
    else()
        target_link_libraries(${CMAKE_MATCH_1} PUBLIC GTest::gtest_main ${LINK_LIBS_GLOBAL} -lpthread)
    endif()
    gtest_discover_tests(${CMAKE_MATCH_1})
endforeach()