aux_source_directory(. TEST_STUN_EXE)
foreach(item ${TEST_STUN_EXE})
    string(REGEX MATCH ".*[/\\](.*).cpp$" item_src ${item})
    add_executable(${CMAKE_MATCH_1} ${item})
    target_link_libraries(${CMAKE_MATCH_1} PUBLIC GTest::gtest_main ${LINK_LIBS_GLOBAL})
    gtest_discover_tests(${CMAKE_MATCH_1})
endforeach()